--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@
 42. responsive
 
 */
+.header-logo {
+  height: 18px;
+  width: auto;
+}
 .preloader {
   width: 100%;
   height: 100%;
@@ -1430,6 +1434,7 @@ textarea {
   color: #67757c;
   white-space: nowrap;
 }
+
 @media (min-width: 768px) {
   .navbar-header {
     width: 240px;
@@ -2254,14 +2259,41 @@ textarea {
 .card-body {
   padding: 0;
 }
+
 .card {
   background: #ffffff none repeat scroll 0 0;
   margin: 15px 0;
-  padding: 20px;
+  /*padding: 20px;*/
   border: 0 solid #e7e7e7;
   border-radius: 5px;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
 }
+
+#incardpropertyimage {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  height: 210px;
+  width: auto;
+}
+
+#innercard_headertext {
+  padding: 20px;
+}
+
+#innercard_headertext h2{
+  margin-bottom: 0px;
+}
+
+#innercard_headertext h3{
+  margin-bottom: 5px;
+  text-align: center;
+}
+
+#innercard_normaltext_subtext {
+  font-size: 11px;
+  text-align: center;
+}
+
 .card-subtitle {
   font-size: 12px;
   margin: 10px 0;
@@ -5495,6 +5527,7 @@ tbody tr td:last-child {
 .login-logo img {
   height: 75px;
 }
+
 .login-content {
   margin: 100px 0;
 }
