--- a/css/style.css
+++ b/css/style.css
@@ -2269,6 +2269,12 @@ textarea {
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
 }
 
+#property_specific_image{
+  border-radius: 5px;
+  height: 450px;
+  width: auto;
+}
+
 #incardpropertyimage {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -2317,6 +2323,17 @@ textarea {
 #innercard_headertext h3{
   margin-bottom: 5px;
   text-align: center;
+}
+
+.property_focus_card p{
+  margin-bottom: 0px;
+  text-align: left;
+}
+
+.property_focus_card h3{
+  margin-top: 0px;
+  margin-bottom: 40px;
+  text-align: left;
 }
 
 #innercard_normaltext_subtext {
